implemented connect base segment