@@ -3,12 +3,16 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.beryx.jlink' version '2.24.1'
+    id "org.javamodularity.moduleplugin" version "1.5.0"
     id 'checkstyle'
     id 'jacoco'
 }
-
 group 'edu.kit.rose'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 1.12
+
+mainClassName = "$moduleName/com.sample.Main"
 
 repositories {
     mavenCentral()
@@ -43,16 +47,25 @@ dependencies {
     implementation('com.google.inject:guice:5.1.0')
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
-
     implementation('org.jgrapht:jgrapht-core:1.5.1')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+    testImplementation ("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     testImplementation('org.mockito:mockito-core:4.3.1')
+    testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.15-alpha'
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    //Options for TestFX
+    jvmArgs = [
+            '--add-opens', "$moduleName/com.sample.foo=org.testfx.junit5",
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
+    ]
     finalizedBy jacocoTestReport
 }
 
